--- a/.github/workflows/reusable-go-build-test-scan-simple.yaml
+++ b/.github/workflows/reusable-go-build-test-scan-simple.yaml
@@ -84,7 +84,7 @@ jobs:
 
   sonar-scan:
     runs-on: ubuntu-latest
-    if: secrets.SONAR_TOKEN
+    if: ${{ secrets.SONAR_TOKEN }} != ''
     needs:
       - test
     steps:
@@ -114,9 +114,9 @@ jobs:
             sonar.organization=${{ inputs.SONAR_ORGANIZATION }}
 
 
-  snyk-scan:
-    runs-on: ubuntu-latest
-    if: secrets.SNYK_KEY
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+#  snyk-scan:
+#    runs-on: ubuntu-latest
+#    if: secrets.SNYK_KEY
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v3
