fix: Try extracting the secret from the event context

--- a/.github/workflows/reusable-go-build-test-scan-simple.yaml
+++ b/.github/workflows/reusable-go-build-test-scan-simple.yaml
@@ -84,7 +84,7 @@ jobs:
 
   sonar-scan:
     runs-on: ubuntu-latest
-    if: ${{ secrets.SONAR_TOKEN }} != ''
+    if: github.event.secrets.SONAR_TOKEN != ''
     needs:
       - test
     steps:
