--- a/.github/workflows/reusable-go-build-test-scan-simple.yaml
+++ b/.github/workflows/reusable-go-build-test-scan-simple.yaml
@@ -19,7 +19,6 @@ on:
         required: false
         type: string
         description: The sonar organization information.  Required if sonar token is set and there is no sonar-project.properties at the root of your repo.
-
     secrets:
       SNYK_KEY:
         required: false
@@ -89,7 +88,7 @@ jobs:
       - test
     steps:
       - name: Checkout
-        uses: actions/checkout@v3ß
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - name: Download Coverage Report
