test: try leveraging environment variables

--- a/.github/workflows/reusable-go-build-test-scan-simple.yaml
+++ b/.github/workflows/reusable-go-build-test-scan-simple.yaml
@@ -83,7 +83,9 @@ jobs:
 
   sonar-scan:
     runs-on: ubuntu-latest
-    if: secrets.SONAR_TOKEN != ''
+    env:
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    if: env.SONAR_TOKEN != ''
     needs:
       - test
     steps:
