--- a/.github/workflows/reusable-go-build-test-scan-simple.yaml
+++ b/.github/workflows/reusable-go-build-test-scan-simple.yaml
@@ -81,11 +81,18 @@ jobs:
           path: "coverage.out"
           retention-days: 1
 
+      - name: Check For SonarCloud Token
+        id: check-sonar-secret
+        run: |
+          if [[ "${{ secrets.SONAR_TOKEN }}" != "" ]]; then
+            echo "::set-output name=have_sonar_secrets::true"
+          else
+            echo "::set-output name=have_sonar_secrets::false"
+          fi
+
   sonar-scan:
     runs-on: ubuntu-latest
-    env:
-      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-    if: env.SONAR_TOKEN != ''
+    if: needs.test.outputs.have_sonar_secrets == 'true'
     needs:
       - test
     steps:
