--- a/.github/workflows/reusable-go-build-test-scan-simple.yaml
+++ b/.github/workflows/reusable-go-build-test-scan-simple.yaml
@@ -119,9 +119,9 @@ jobs:
           SONAR_HOST_URL: https://sonarcloud.io
         with:
           args: >
-            sonar.go.coverage.reportPaths=${{ steps.download.outputs.download-path }}
-            sonar.projectKey=${{ inputs.SONAR_PROJECT_KEY }}
-            sonar.organization=${{ inputs.SONAR_ORGANIZATION }}
+            -Dsonar.go.coverage.reportPaths=${{ steps.download.outputs.download-path }}/coverage.out
+            -Dsonar.projectKey=${{ inputs.SONAR_PROJECT_KEY }}
+            -Dsonar.organization=${{ inputs.SONAR_ORGANIZATION }}
 
 
 #  snyk-scan:
